Apache Tez Change Log
=====================


Release 0.7.0: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2176. Move all logging to slf4j. (commons-logging jar no longer part of Tez tar)
  TEZ-1993. Implement a pluggable InputSizeEstimator for grouping fairly

ALL CHANGES:
  TEZ-2084. Tez UI: Stacktrace format info is lost in diagnostics
  TEZ-2374. Fix build break against hadoop-2.2 due to TEZ-2325.
  TEZ-2314. Tez task attempt failures due to bad event serialization
  TEZ-2368. Make a dag identifier available in Context classes.
  TEZ-2325. Route status update event directly to the attempt.
  TEZ-2358. Pipelined Shuffle: MergeManager assumptions about 1 merge per source-task.
  TEZ-2342. TestFaultTolerance.testRandomFailingTasks fails due to timeout.
  TEZ-2362. State Change Notifier Thread should be stopped when dag is
  completed
  TEZ-2364. Resolve config parameter replacement on the client, before sending them to the AM.
  TEZ-2298. Avoid logging full exception trace in TaskRunner when it's not the main error reason and is ignored.
  TEZ-2248. VertexImpl/DAGImpl.checkForCompletion have too many termination cause checks
  TEZ-2341. TestMockDAGAppMaster.testBasicCounters fails on windows
  TEZ-2352. Move getTaskStatistics into the RuntimeTask class.
  TEZ-2357. Tez UI: misc.js.orig is committed by accident
  TEZ-2261. Should add diagnostics in DAGAppMaster when recovery error happens
  TEZ-2340. TestRecoveryParser fails
  TEZ-2345. Tez UI: Enable cell level loading in all DAGs table
  TEZ-2330. Create reconfigureVertex() API for input based initialization
  TEZ-2292. Add e2e test for error reporting when vertex manager invokes
  plugin APIs
  TEZ-2308. Add set/get of record counts in task/vertex statistics
  TEZ-2344. Tez UI: Equip basic-ember-table's cell level loading for all use cases in all DAGs table
  TEZ-2313. Regression in handling obsolete events in ShuffleScheduler.
  TEZ-2212. Notify components on DAG completion.